[gd_scene load_steps=2 format=3 uid="uid://bpecisqsbhpii"]

[ext_resource type="Script" uid="uid://bwq540m3hl4hx" path="res://ui/CursesPanel.gd" id="1_sk7rf"]

[node name="CursesPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_sk7rf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 6

[node name="CostLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Cost: 15 ore"

[node name="CraftBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Craft Curse"

[node name="CountLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Curses: 0"
